Fix dark mode for Flowers, Gamme Logic, Gnome Hollow, Love Letter, Mexica, Orleans, Rat Jack, Sky Team and Sushi Go Party

--- a/src/css/dark_theme/game.css
+++ b/src/css/dark_theme/game.css
@@ -158,6 +158,10 @@ spectator-mode .log .roundedbox .playername {
   background: linear-gradient(180deg, #727272, #777);
 }
 
+.bgabutton.disabled {
+  border-color: var(--light-50);
+}
+
 .bgabutton_red {
   border: 1px solid #69452e;
 }
@@ -598,4 +602,14 @@ div[id*="popin"][id$="underlay"] {
 /* pour éviter que l'overlay sur #overall-content:before de certains jeux s'affiche par dessus des éléments de cette zone: */
 #right-side-second-part>* {
   position: relative;
+}
+
+.discussion_bubble {
+  background: var(--dark-10);
+  color: var(--light-80);
+  filter: var(--highlight-min);
+}
+
+.discussion_bubble:after {
+  border-color: var(--dark-10) transparent;
 }
